--- a/pom.xml
+++ b/pom.xml
@@ -64,6 +64,14 @@
             <artifactId>spring-boot-starter-security</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-test</artifactId>
+            <version>6.1.5</version>
+            <scope>test</scope>
+        </dependency>
+
+
         <!-- TEST CONTAINERS -->
         <dependency>
             <groupId>org.testcontainers</groupId>
