--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,6 +5,7 @@ server:
 spring:
   data:
    mongodb:
+     uri: mongodb://admin:admin@localhost:27017/planner
      host: localhost
      port: 27017
      database: planner
