--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,11 +1,13 @@
 server:
+  port: 8082
   servlet:
     context-path: /meal-planner
 
 spring:
   data:
-   mongodb:
-     uri: mongodb://admin:admin@localhost:27017/planner
-     database: planner
-
-
+    mongodb:
+      uri: mongodb://admin:admin@localhost:27017/planner
+      database: planner
+  thymeleaf:
+    prefix: classpath:/templates/
+    suffix: .html
